--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -46,7 +46,7 @@
 <body>
     <h1>Get the car by id</h1>
     <input type="text" id="car-id-input" placeholder="Enter Car ID">
-    <button id="fetch-car-btn">Fetch Car Details</button>
+    <button id="fetch-car-btn">Get car by id</button>
     <div id="car-container"></div>
 
     <h1>Make a new car</h1>
@@ -69,7 +69,7 @@ document.getElementById('fetch-car-btn').addEventListener('click', function() {
         return;
     }
 
-    fetch(`/car/${inputId}`)  // Fetching car details by ID
+    fetch(`/api/cars/${inputId}`)  // Fetching car details by ID
     .then(response => {
         if (!response.ok) {
             if (response.status === 404) {
@@ -131,7 +131,7 @@ function submitCarDetails() {
         return;
     }
 
-    fetch('/car/', {
+    fetch('/api/cars/', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
