--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -3,45 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='admin.css') }}">
     <title>Car Details</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 20px;
-        }
-        .car-card {
-            background-color: rgb(176, 229, 255);
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-        .car-name, .form-title {
-            font-size: 24px;
-            margin-bottom: 10px;
-            color: #333;
-        }
-        .car-details {
-            color: #666;
-            margin-bottom: 10px;
-            width: 95%;
-            padding: 8px;
-        }
-        #fetch-car-btn {
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            margin-bottom: 20px;
-        }
-        #fetch-car-btn:hover {
-            background-color: #0056b3;
-        }
-    </style>
 </head>
 <body>
     <h1>Get the car by id</h1>
