--- a/src/static/Home.css
+++ b/src/static/Home.css
@@ -9,7 +9,7 @@ body {
     border-radius: 8px;
     width: fit-content;
     margin: auto;
-    margin-bottom: 30px; /* Spacing between the form and the vehicle cards */
+    margin-bottom: 30px;
 }
 select, input[type="submit"] {
     width: 100%;
@@ -31,7 +31,7 @@ input[type="submit"]:hover {
     box-shadow: 0 2px 5px rgba(0,0,0,0.15);
     padding: 10px;
     border-radius: 5px;
-    margin-bottom: 10px; /* Spacing between each car card */
+    margin-bottom: 10px;
 }
 .car-title {
     color: #333;
@@ -43,16 +43,16 @@ input[type="submit"]:hover {
     color: #666;
 }
 .res-but {
-    background-color: #007BFF; /* Blue background */
-    color: white;            /* White text */
-    padding: 10px 20px;      /* Padding around the text */
-    border: none;            /* No border */
-    border-radius: 5px;      /* Rounded corners */
-    cursor: pointer;         /* Pointer cursor on hover */
-    font-size: 16px;         /* Text size */
-    outline: none;           /* Removes the outline */
+    background-color: #007BFF;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    outline: none;
 }
 
 .res-but:hover {
-    background-color: #0056b3; /* Slightly darker blue on hover */
+    background-color: #0056b3;
 }
