--- a/src/static/signup.css
+++ b/src/static/signup.css
@@ -29,3 +29,35 @@ body {
         input[type="submit"]:hover {
             background-color: #0056b3;
         }
+        button {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            background-color: #17a2b8;
+            color: white;
+            cursor: pointer;
+            text-decoration: none; /* Remove underline from button text */
+            font-size: 16px;
+        }
+
+        button:hover {
+            background-color: #138496;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+        }
+        .login-button-container {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+
+        .login-button {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            background-color: #17a2b8;
+            color: white;
+            cursor: pointer;
+            text-decoration: none;
+            font-size: 16px;
+        }
+
