--- a/src/templates/Signup.html
+++ b/src/templates/Signup.html
@@ -6,16 +6,19 @@
     <title>Sign Up</title>
 </head>
 <body>
+    <div class="login-button-container">
+        <button class="login-button" onclick="window.location.href='/Login'">Log in</button>
+    </div>
     <div class="login-form">
         <h2>Sign Up</h2>
-        <form action="auth/signup" method="post"> <!-- Corrected action attribute -->
+        <form action="auth/signup" method="post">
             <div>
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div>
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required> <!-- Changed input type to password -->
+                <input type="password" id="password" name="password" required>
             </div>
             <div>
                 <input type="submit" value="Sign Up">
