--- a/src/static/signup.css
+++ b/src/static/signup.css
@@ -36,7 +36,7 @@ body {
             background-color: #17a2b8;
             color: white;
             cursor: pointer;
-            text-decoration: none; /* Remove underline from button text */
+            text-decoration: none;
             font-size: 16px;
         }
 
